--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
   	<dependency>
     	<groupId>com.sparkjava</groupId>
     	<artifactId>spark-core</artifactId>
-    	<version>2.3</version>
+    	<version>2.0.0</version>
 	</dependency>
-	<dependency>
+<!-- 	<dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-simple</artifactId>
         <version>1.7.5</version>
-    </dependency>
+    </dependency> -->
     <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
