--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,30 @@
   <groupId>com.nexus.app</groupId>
   <artifactId>nexus</artifactId>
   <version>1.0-SNAPSHOT</version>
-  
+  <properties>
+    <powermock.version>1.6.2</powermock.version>
+</properties>
+
+
+
   <dependencies>
   	<dependency>
     	<groupId>com.sparkjava</groupId>
     	<artifactId>spark-core</artifactId>
     	<version>2.0.0</version>
 	</dependency>
+	   <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+   </dependency>
+   <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+   </dependency>
 <!-- 	<dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-simple</artifactId>
