--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,19 @@
       <junit.version>4.11</junit.version>
       <hamcrest.version>1.3</hamcrest.version>
       <mockito.version>1.9.5</mockito.version>
-</properties>
-
-
-
+  </properties>
+  <build>
+  	<plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <dependencies>
       <dependency>
           <groupId>junit</groupId>
@@ -64,6 +73,11 @@
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
         <version>2.2.4</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.googlecode.json-simple</groupId>
+    	<artifactId>json-simple</artifactId>
+    	<version>1.1.1</version>
     </dependency>
   </dependencies>
 
